--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -438,6 +438,8 @@ select{
 }
 .modal_header h2{
     font-size: 2.5rem;
+    color: #444;
+    font-weight: 400;
 }
 .modal_header i {
     color: #999;
@@ -499,11 +501,11 @@ form .fields .input-field{
 .input-field label {
     font-size: 1.7rem;
     font-weight: 500;
-    color: #2e2e2e;
+    color: #555
 }
 .input-field input{
     outline: none;
-    font-size: 1.3rem;
+    font-size: 1.7rem;
     font-weight: 400;
     color: #333;
     border-radius: 5px;
@@ -527,7 +529,7 @@ form .fields .input-field{
     align-items: center;
     justify-content: center;
     height: 45px;
-    max-width: 200px;
+    max-width: 150px;
     width: 100%;
     border: none;
     outline: none;
@@ -535,12 +537,12 @@ form .fields .input-field{
     font-size: 1.7rem;
     border-radius: 5px;
     margin: 25px 0;
-    background-color: #4070f4;
+    background-color: var(--btn-add);
     transition: all 0.3s linear;
     cursor: pointer;
 }
 form button:hover{
-    background-color: #265df2;
+    background-color: var(--main-color-hover);
 }
 form button i{
     margin: 0 6px;
@@ -644,3 +646,127 @@ form .buttons button{
 
 
 
+.btn--success {
+    background-color: #71be34;
+  }
+  
+  .btn--warn {
+    background-color: #ffb702;
+  }
+  
+  .btn--danger {
+    background-color: #ff623d;
+  }
+  
+  .btn--disabled {
+    opacity: 0.5 !important;
+    cursor: default;
+  }
+  
+  /* ======= Toast message ======== */
+  
+  #toast {
+    position: fixed;
+    top: 32px;
+    right: 32px;
+    z-index: 999999;
+  }
+  
+  .toast {
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 2px;
+    padding: 20px 0;
+    min-width: 400px;
+    max-width: 450px;
+    border-left: 4px solid;
+    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.08);
+    transition: all linear 0.3s;
+  }
+  
+  @keyframes slideInLeft {
+    from {
+      opacity: 0;
+      transform: translateX(calc(100% + 32px));
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+  
+  @keyframes fadeOut {
+    to {
+      opacity: 0;
+    }
+  }
+  
+  .toast--success {
+    border-color: #47d864;
+  }
+  
+  .toast--success .toast__icon {
+    color: #47d864;
+  }
+  
+  .toast--info {
+    border-color: #2f86eb;
+  }
+  
+  .toast--info .toast__icon {
+    color: #2f86eb;
+  }
+  
+  .toast--warning {
+    border-color: #ffc021;
+  }
+  
+  .toast--warning .toast__icon {
+    color: #ffc021;
+  }
+  
+  .toast--error {
+    border-color: #ff623d;
+  }
+  
+  .toast--error .toast__icon {
+    color: #ff623d;
+  }
+  
+  .toast + .toast {
+    margin-top: 24px;
+  }
+  
+  .toast__icon {
+    font-size: 24px;
+  }
+  
+  .toast__icon,
+  .toast__close {
+    padding: 0 16px;
+  }
+  
+  .toast__body {
+    flex-grow: 1;
+  }
+  
+  .toast__title {
+    font-size: 16px;
+    font-weight: 600;
+    color: #333;
+  }
+  
+  .toast__msg {
+    font-size: 14px;
+    color: #888;
+    margin-top: 6px;
+    line-height: 1.5;
+  }
+  
+  .toast__close {
+    font-size: 20px;
+    color: rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+  }
+  
